tetrate/tis0902/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-istio-configmap-tracing
spec:
  validationFailureAction: Enforce
