tetrate/tis0902/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-istio-configmap-tracing-test
spec:
  steps:
    - name: apply-kyverno-policy
      try:
        - apply:
            file: ../check-istio-configmap-tracing.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml
